fetch pageNoContent from db
