# tlk-frontend19/src/app/api/model/dokumentenstapelNoContent.ts
@@ -1,0 +1,23 @@
+/**
+ * TheLionKing
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface DokumentenstapelNoContent { 
+    id?: string;
+    vorgangId?: string;
+    stapelName?: string;
+    uploadFilename?: string;
+    originalFilename?: string;
+    pdfStorageRef?: string;
+    seitenAnzahl?: number;
+    status?: string;
+    createdAt?: string;
+}
+
