# tlk-frontend19/src/app/api/model/models.ts
@@ -2,9 +2,11 @@ export * from './apiError';
 export * from './createVorgangResponse';
 export * from './document';
 export * from './dokumentenstapel';
+export * from './dokumentenstapelNoContent';
 export * from './page';
 export * from './pageExtractResponse';
 export * from './pageInfo';
+export * from './pageNoContent';
 export * from './seitenExtrakt';
 export * from './stapelProgress';
 export * from './versicherter';
