# tlk-frontend19/src/app/api/model/pageNoContent.ts
@@ -1,0 +1,24 @@
+/**
+ * TheLionKing
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface PageNoContent { 
+    seiteId?: string;
+    pageNo?: number;
+    pdfPagePath?: string;
+    sha256?: string;
+    status?: string;
+    errorMessage?: string | null;
+    dokumentenstapelId?: string;
+    seitenExtraktId?: string | null;
+    createdAt?: string;
+    usable?: boolean;
+}
+
